--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "localhost:6379",
-    "cpqconnectionstring": "Data Source=127.0.0.1,1433;Initial Catalog=CPQ;Persist Security Info=True;User ID=sa;Password=Conga@062023;TrustServerCertificate=True"
+    "cpqconnectionstring": "Data Source=127.0.0.1,1433;Initial Catalog=CPQ;Persist Security Info=True;User ID=sa;Password=*****;TrustServerCertificate=True"
   },
   "Kestrel": {
     "Endpoints": {
